--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MayTheForceBeWith_Leehendry</string>
+    <string name="headline_character_list">Star Wars Chars</string>
+    <string name="search_hint">Search character</string>
+    <string name="error_message">An error occurred. Please, try again.</string>
 </resources>
