--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="headline_character_list">Star Wars Chars</string>
     <string name="search_hint">Search character</string>
     <string name="error_message">An error occurred. Please, try again.</string>
+    <string name="details_height">Height</string>
+    <string name="details_mass">Mass</string>
+    <string name="details_hair_color">Hair color</string>
+    <string name="details_skin_color">Skin color</string>
+    <string name="details_eye_color">Eye color</string>
+    <string name="details_birth_year">Birth year</string>
+    <string name="details_gender">Gender</string>
 </resources>
