feat(favorite): add necessary assets for saving favorites

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="details_eye_color">Eye color</string>
     <string name="details_birth_year">Birth year</string>
     <string name="details_gender">Gender</string>
+    <string name="content_description_button_favorite">Button to mark as favorite</string>
 </resources>
